--- a/package.json
+++ b/package.json
@@ -4,15 +4,10 @@
   "description": "Webbutveckling – HTML &amp; CSS",
   "main": "index.js",
   "scripts": {
-    "sass:watch": "sass --watch src/style.scss style.css",
-    "sass:compile": "sass src/style.scss style.css",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "vite": "vite"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "sass": "^1.80.3"
-  },
   "devDependencies": {
     "vite": "^6.0.3"
   }
