--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Webbutveckling – HTML &amp; CSS",
   "main": "index.js",
   "scripts": {
-    "vite": "vite"
+    "vite": "vite",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "vite": "^6.0.3"
   }
 }
